--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <a href="#nosotros" class="hover:underline">Nosotros</a>
                 <a href="#servicios" class="hover:underline">Servicios</a>
                 <a href="#equipo" class="hover:underline">Equipo</a>
-                <a href="#contactForm" class="hover:underline">Contacto</a>
+                <a href="#contacto" class="hover:underline">Contacto</a>
             </nav>
         </div>
 
@@ -91,7 +91,7 @@
             <a href="#nosotros" class="block py-2 hover:underline">Nosotros</a>
             <a href="#servicios" class="block py-2 hover:underline">Servicios</a>
             <a href="#equipo" class="block py-2 hover:underline">Equipo</a>
-            <a href="#contactForm" class="block py-2 hover:underline">Contacto</a>
+            <a href="#contacto" class="block py-2 hover:underline">Contacto</a>
         </div>
     </header>
 
@@ -251,8 +251,8 @@
     <!-- EQUIPO -->
     <section class="py-16 bg-[#f8fbff]">
         <div class="max-w-5xl mx-auto">
-            <h2 class="text-3xl font-bold text-[#627eff] text-center mb-10">Nuestro Equipo</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+            <h2 class="text-3xl font-bold text-[#627eff] text-center mb-10" id="equipo">Nuestro Equipo</h2>
+            <div class="grid grid-cols-1 md:    grid-cols-3 gap-8 text-center">
                 <div>
                     <img src="assets/sindy_team.png" alt="Psicóloga 1" class=" w-100 h-500 mx-auto mb-4">
 
@@ -270,7 +270,7 @@
 
     <!-- FORMULARIO DE CONTACTO -->
     <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
-        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
+        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center" id="contacto">Contáctanos</h2>
 
         <!-- Mensaje de éxito -->
         <div id="successMessage"
