--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -43,21 +43,21 @@
 
             <!-- Menú de navegación -->
             <nav id="menu" class="hidden md:flex space-x-4 text-sm font-semibold">
-                <a href="#inicio" class="hover:underline">Inicio</a>
-                <a href="#nosotros" class="hover:underline">Nosotros</a>
-                <a href="#servicios" class="hover:underline">Servicios</a>
-                <a href="#equipo" class="hover:underline">Equipo</a>
-                <a href="#contactForm" class="hover:underline">Contacto</a>
+                <a href="index.html" class="hover:underline">Inicio</a>
+                <a href="index.html#nosotros" class="hover:underline">Nosotros</a>
+                <a href="index.html#servicios" class="hover:underline">Servicios</a>
+                <a href="index.html#equipo" class="hover:underline">Equipo</a>
+                <a href="#contacto" class="hover:underline">Contacto</a>
             </nav>
         </div>
 
         <!-- Menú desplegable en móviles -->
         <div id="mobile-menu" class="md:hidden hidden bg-[#66a6da] px-4 pb-4">
-            <a href="#inicio" class="block py-2 hover:underline">Inicio</a>
-            <a href="#nosotros" class="block py-2 hover:underline">Nosotros</a>
-            <a href="#servicios" class="block py-2 hover:underline">Servicios</a>
-            <a href="#equipo" class="block py-2 hover:underline">Equipo</a>
-            <a href="#contactForm" class="block py-2 hover:underline">Contacto</a>
+            <a href="index.html" class="block py-2 hover:underline">Inicio</a>
+            <a href="index.html#nosotros" class="block py-2 hover:underline">Nosotros</a>
+            <a href="index.html#servicios" class="block py-2 hover:underline">Servicios</a>
+            <a href="index.html#equipo" class="block py-2 hover:underline">Equipo</a>
+            <a href="#contacto" class="block py-2 hover:underline">Contacto</a>
         </div>
     </header>
 
@@ -134,7 +134,7 @@
 
     <!-- FORMULARIO DE CONTACTO -->
     <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
-        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
+        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center" id="contacto">Contáctanos</h2>
 
         <!-- Mensaje de éxito -->
         <div id="successMessage"
