--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 
 
     <!-- NOSOTROS -->
-    <section class="py-16 bg-[#f0f8ff]">
+    <section class="py-16 bg-[#f0f8ff]" id="nosotros">
         <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-3xl font-bold text-[#627eff] mb-4" id="nosotros">Sobre Nosotros</h2>
+            <h2 class="text-3xl font-bold text-[#627eff] mb-4" >Sobre Nosotros</h2>
             <p class="text-gray-700">
                 Somos un equipo de profesionales comprometidos con tu salud mental. Nuestra misión es acompañarte en el
                 proceso de autoconocimiento y bienestar, a través de un enfoque humano, empático y basado en evidencia
@@ -249,9 +249,9 @@
 
 
     <!-- EQUIPO -->
-    <section class="py-16 bg-[#f8fbff]">
+    <section class="py-16 bg-[#f8fbff]" id="equipo">
         <div class="max-w-5xl mx-auto">
-            <h2 class="text-3xl font-bold text-[#627eff] text-center mb-10" id="equipo">Nuestro Equipo</h2>
+            <h2 class="text-3xl font-bold text-[#627eff] text-center mb-10">Nuestro Equipo</h2>
             <div class="grid grid-cols-1 md:    grid-cols-3 gap-8 text-center">
                 <div>
                     <img src="assets/sindy_team.png" alt="Psicóloga 1" class=" w-100 h-500 mx-auto mb-4">
@@ -269,8 +269,8 @@
     </section>
 
     <!-- FORMULARIO DE CONTACTO -->
-    <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
-        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center" id="contacto">Contáctanos</h2>
+    <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6" id="contacto">
+        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center" >Contáctanos</h2>
 
         <!-- Mensaje de éxito -->
         <div id="successMessage"
