--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -133,8 +133,8 @@
     </section>
 
     <!-- FORMULARIO DE CONTACTO -->
-    <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
-        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center" id="contacto">Contáctanos</h2>
+    <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6" id="contacto">
+        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center" >Contáctanos</h2>
 
         <!-- Mensaje de éxito -->
         <div id="successMessage"
